@@ -254,7 +254,7 @@ class UserServiceImplTest {
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(4.5, result.getFirst().getAverageRating());
+        assertEquals(4.5, result.get(0).getAverageRating());
     }
 
     @Test
@@ -270,6 +270,6 @@ class UserServiceImplTest {
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(4.5, result.getFirst().getAverageRating());
+        assertEquals(4.5, result.get(0).getAverageRating());
     }
 }
